--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #eaeaea;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
