--- a/src/components/Search/styles.module.css
+++ b/src/components/Search/styles.module.css
@@ -4,12 +4,12 @@
     text-align: center;
     align-content: center;
     width: 100%;
-    height: 40px;
+    height: 30px;
     border-radius: 50px;
     border: none;
-    padding: 0 10px;
+    padding: 10px 20px;
     margin: 15px;
-    font-size: 14px;
+    font-size: 0.9rem;
     outline: none;
     background-color: white;
 }
