--- a/src/components/Search/styles.module.css
+++ b/src/components/Search/styles.module.css
@@ -13,3 +13,12 @@
     outline: none;
     background-color: white;
 }
+
+@media screen and (max-width: 600px) {
+    .search {
+        width: 250px;
+        font-size: 0.8rem;
+
+    }
+}
+    
