--- a/src/components/TextArea/styles.module.css
+++ b/src/components/TextArea/styles.module.css
@@ -62,3 +62,32 @@
   font-size: 1.2rem;
   cursor: pointer;
 }
+
+
+@media screen and (max-width: 600px) {
+  .TextAreaDiv {
+    width: 300px;
+  }
+  .TextArea {
+    width: 250px;
+    font-size: 1rem;
+  }
+  .colorAndBtn {
+    flex-direction: column;
+    align-items: center;
+  }
+  .colorDiv {
+    width: 100%;
+    margin: 0;
+  }
+  .color {
+    width: 45px;
+    height: 45px;
+    margin: 0 7px;
+  }
+  .ekleBtn {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
+  
