--- a/src/components/Content/styles.module.css
+++ b/src/components/Content/styles.module.css
@@ -43,3 +43,20 @@
   margin: 0 40px;
 }
 
+@media screen and (max-width: 600px) {
+  .contentDiv {
+    width: 150px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+  }
+
+  .contentDiv span {
+    width: 150px;
+    height: 150px;
+    padding: 10px;
+    font-size: 15px;
+  }
+}
+
+
+
