--- a/src/components/Content/styles.module.css
+++ b/src/components/Content/styles.module.css
@@ -15,6 +15,20 @@
   height: 200px;
   justify-self: stretch;
   border-radius: 5px;
+  font-size: 15px;
+}
+
+.time{
+  background-color: #fff;
+  /* color: grey; */
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  position: absolute;
+  top: 0.5rem;
+  left: 0.5rem;
+
 }
 
 .deleteButton {
